css/main.css
/* ... */
.clearfix::after{
  content:"";
  display: table;
  clear: both;
}

.container{
  width: 1200px;
  padding: 0 20px;
  margin: 0 auto;
}

.main-header{
  background-color: #eeeeee;
  font-weight: 500;
  font-size: 16px;
  margin-bottom: 80px;
}

.top-navigation-box{
  display: flex;
  position: relative;
}

.top-navigation-box a{
  text-decoration: inherit;
  color: inherit;
}

.main-logo{
  padding-top: 49px;
  width: 160px;
}

.main-logo img{
  display: block;
}

.main-logo:hover{
  opacity: 0.8;
}

.main-logo:active{
  opacity: 0.3;
}

.main-navigation{
  margin-top: 75px;
  flex-grow: 1;
}

.navigation-list{
  font-weight: 500;
  list-style: none;
  display: flex;
  margin: 0;
  padding: 0 15px;
  justify-content: center;
}

.navigation-item{
  margin-right: 45px;
  line-height: 30px;
  font-weight: 500;
  text-transform: uppercase;
  font-size: 16px;
}

.navigation-item:hover{
  color: #fb565a;
}

.navigation-item:active{
  color: #000000;
  opacity: 0.3;
}

.navigation-item-active a::after{
  content: "";
  display: block;
  width: inherit;
  margin-top: 3px;
  border-top: 2px solid #fb565a;
}

.basket{
  line-height: 30px;
  margin-left: auto;
  padding-top: 75px;
  padding-left: 41px;
  position: relative;
  font-weight: 500;
  text-transform: uppercase;
  font-size: 16px;}

.basket:hover{
  color: #fb565a;
}

.basket:active a{
  color: #000000;
  opacity: 0.3;
}

.basket-active::after{
  content: "";
  display: block;
  width: 112px;
  margin-top: 3px;
  border-top: 2px solid #fb565a;
  position: absolute;
  left: 3px;
}


.basket::before{
  content: "";
  display: block;
  width: 15px;
  height: 15px;
  background-image: url(img/cart-icon.png);
  position: absolute;
  top: 83px;
  left: 0;
}

.slider-box{
  position: relative;
}

.slider-item{
  height: 430px;
  padding-right: 10px;
  display: none;
}

.slider-item1{
  background: url("img/slide1.png") no-repeat;
  background-position: 430px 19px;
}

.slider-item2{
  background: url("img/slide2.png") no-repeat;
  background-position: right top;
}

.slider-item3{
  background: url("img/slide3.png") no-repeat;
  background-position: right 19px;
}

#radio1,#radio2,#radio3{
  display: none;
}

#radio1:checked ~ .slider-item1{
  display: block;
}

#radio2:checked ~ .slider-item2{
  display: block;
}

#radio3:checked ~ .slider-item3{
  display: block;
}




.slider-information{
  width: 560px;
}

.slider-title{
  font-size: 55px;
  line-height: 55px;
  font-weight: 500;
  margin: 0;
  padding-top: 78px;
  margin-bottom: 26px;
}

.slider-text{
  width: 460px;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 40px;
}

.slider-control{
  width: 200px;
  position: absolute;
  bottom: 92px;
  left: 50%;
  margin-left: -100px;
  text-align: center;
}

.slider-control-item{
  position: relative;
  width: 18px;
  height: 18px;
  border-radius: 50%;
  background-color: #ffffff;
}

.control-item-box{
  display: inline-block;
  margin-right: 13px
}

.control-item-box:last-child{
  margin-right: 0;
}

.slider-control-radio{
  display: none;
}



.slider-control-item::before{
  display: none;
  position: absolute;
  top:5px;
  left: 5px;
  content: "";
  width: 8px;
  height: 8px;
  border: 2px #c1c1c1 solid;
  border-radius: 50%;
}

#radio1:checked ~ .slider-control .slider-control-item1::before{
  display: block;
}

#radio2:checked ~ .slider-control .slider-control-item2::before{
  display: block;
}

#radio3:checked ~ .slider-control .slider-control-item3::before{
  display: block;
}

.main-button{
  display: inline-block;
  width: 240px;
  line-height: 18px;
  font-size: 16px;
  padding: 16px 0;
  background-color: #fb565a;
  color: white;
  border-radius: 2px;
  font-weight: 500;
  text-decoration: none;
  text-transform: uppercase;
  text-align: center;
  border: none;
  outline: none;
}

.main-button:hover{
  background-color: #e74246;
}

.main-button:active{
  background-color: #d7373b;
  color: rgba(255, 255, 255, 0.3);
}

.product{
  margin-bottom: 120px;
  display: flex;
}

.product-item{
  width: 300px;
  margin-right: 100px;
}

.product-item_right{
  margin-right: 0px;
}

.product-header{
  margin-bottom: 21px;
}

.product-title{
  margin: 0;
  margin-bottom: 16px;
  font-weight: 700;
  text-transform: uppercase;
  font-size: 24px;
  line-height: 30px;
}

.product-text{
  margin-bottom: 32px;
  color: #283136;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
}

.button_mod_left{
  width: 160px;
}

.button_mod_center{
  width: 160px;
  background-color: #00ca74;
}

.button_mod_center:hover{
  background-color: #00bc6c;
}

.button_mod_center:active{
  background-color: #00aa62;
  color: rgba(255, 255, 255, 0.3);
}

.button_mod_right{
  width: 160px;
  background-color: #efc84a;
}

.button_mod_right:hover{
  background-color: #eab534;
}

.button_mod_right:active{
  background-color: #e5a722;
  color: rgba(255, 255, 255, 0.3);
}

.nerds-information{
  display: flex;
  justify-content: space-between;
  margin-bottom: 50px;
}

.information-box{
  width: 700px;
  padding-top: 3px;

}

.nerds-information-title{
  font-weight: 500;
  font-size: 45px;
  line-height: 45px;
  margin: 0;
  margin-top: 33px;
  margin-bottom: 33px;
}

.nerds-information-text{
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 42px;
  color: #283136;
}

.nerds-information-product{
  padding: 0;
}

.nerds-information-product b{
  font-weight: 700;
  text-transform: uppercase;
  font-size: 16px;
}

.product-list{
  padding: 0;
  margin: 0;
  margin-top: 27px;
  list-style: none;
  font-size: 16px;
  line-height: 24px;
}

.product-list li{
  margin-bottom: 24px;
  padding-left: 36px;
  position: relative;
  font-weight: 400;
  color: #283136;
}

.product-list li::before{
  content: "";
  display: block;
  width: 25px;
  border-top: 2px solid red;
  position: absolute;
  left: 1px;
  top: 11px;
}

.advantages{
  width: 360px;
}

.advantages-content{
  display: flex;
}
/* ... */

